# coffee-atlas

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  heartbeat.yml  release-please.yml
backend/: __init__.py  config.py  main.py
backend/db/: bootstrap.py  columns.py  compact.py  connection.py  entities.py  geojson.py  pg.py  pg_schema.py  schema.py
backend/ingest/: _common.py  cqi_loader.py  distribution_loader.py  embeddings_stage.py  geocode_stage.py  graph_stage.py  overture_shops_loader.py  pipeline.py  processing_descriptions_loader.py  processing_flavor_loader.py  product_edges.py  products_loader.py  roaster_discovery.py  roaster_locations_loader.py  roasting_loader.py  shop_specialty.py  wcr_lexicon_loader.py  wcr_varieties_loader.py
backend/models/: __init__.py  _base.py  activity.py  distribution.py  flavor.py  graph.py  origins.py  processing.py  products.py  recommend.py  roasting.py  search.py  shops.py  users.py  varieties.py
backend/routers/: _activity_entities.py  _helpers.py  account.py  auth.py  distribution.py  flavor.py  graph.py  meta.py  origins.py  processing.py  products.py  (+5 more)
docs/: ADDING_SHOPS_AND_ROASTERS.md  API.md  ARCHITECTURE.md  DATA.md  DATABASE_ERD.md  DEVELOPMENT.md  GETTING_STARTED.md
frontend/: .env.local.example  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ontology/: coffee-atlas-ontology.ttl
(+146 files in other folders)
