[project]
name = "coffee-atlas-backend"
version = "0.1.0"
description = "Backend API for Coffee Atlas — a geospatial coffee knowledge graph platform"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "duckdb>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "google-genai>=1.0.0",
    "owlready2>=0.45",
    "python-dotenv>=1.0.0",
    "polars>=1.0",
    "rdflib>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "ty>=0.0.32,<0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
include = ["backend", "tests/backend", "ontology/scripts"]
respect-ignore-files = true

[tool.ty.terminal]
output-format = "concise"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/backend"]
